Fixed following bugs: Removing from cart by either using minus or remove actions caused tracking problems. Adding and clicking to cart while user is not logged in caused null argument. Details_PAY_NOW action in Order->Details was not HttpPost, therefore caused multiple endings.

--- a/BulkyBookWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyBookWeb/Views/Shared/_Layout.cshtml
@@ -29,9 +29,13 @@
                         <li class="nav-item">              
                                 <a class="nav-link text" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>                                                                
                         </li>
+                        @if (!string.IsNullOrEmpty(User.Identity.Name))
+                        {
                         <li class="nav-item">
                             <a class="nav-link text" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Orders</a>
                         </li>
+                        }
+                        
                         
                         @if (User.IsInRole(SD.Role_Admin))
                         {
