--- a/BulkyBookWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -217,7 +217,7 @@
                             </ul>
 
                             @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment &&
-                            Model.OrderHeader.OrderStatus == SD.StatusShipped) {
+                            Model.OrderHeader.OrderStatus == SD.StatusShipped && User.IsInRole(SD.Role_Company)) {
                                 <button type="submit" class="btn btn-success form-control my-1">Pay Now</button>
                             }
                             @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee)) {
