--- a/BulkyBookWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyBookWeb/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Orders</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text" asp-area="Admin" asp-controller="User" asp-action="Index">User List</a>
+                        </li>
                         }
                         
                         
