--- a/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,7 +11,6 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Product.Id" hidden />
-            <input asp-for="Product.ImageUrl" hidden />
             <div class="row">
                 <div class="col-10">
                     <div class="border p-3 mt-4">
@@ -56,15 +55,15 @@
                             <span asp-validation-for="Product.Price100" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <input type="file" name="file" class="form-control" />
-                            <label asp-for="Product.ImageUrl" class="ms-2"></label>
-                        </div>
-                        <div class="form-floating py-2 col-12">
                             <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-control">
                                 <option disabled selected>--Select Category--</option>
                             </select>
                             <label asp-for="Product.CategoryId" class="ms-2"></label>
                             <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input type = "file" name="files" class="form-control border-0 shadow" multiple/>
+                            <label asp-for="Product.ProductImages" class="ms-2"></label>
                         </div>
                         <div>
                             @if (Model.Product.Id != 0)
@@ -82,10 +81,6 @@
                         </div>
                     </div>
     
-                </div>
-                <div class="col-2">
-                    <image src = "@Model.Product.ImageUrl" width="100%"
-                        style="border-radius:5px; border:1px solid #bbb9b9" />  
                 </div>
             </div>
         </form>
