--- a/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -4,7 +4,7 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-primary py-2">@(Model.Product.Id!=0?"Update":"Create") Product</h2>   
+                <h2 class="text-primary py-2">@(Model.Product.Id != 0 ? "Update" : "Create") Product</h2>
             </div>
         </div>
     </div>
@@ -54,15 +54,22 @@
                             <label asp-for="Product.Price100" class="ms-2"></label>
                             <span asp-validation-for="Product.Price100" class="text-danger"></span>
                         </div>
-                        <div class="form-floating py-2 col-12">
-                            <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-control">
-                                <option disabled selected>--Select Category--</option>
-                            </select>
-                            <label asp-for="Product.CategoryId" class="ms-2"></label>
-                            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                        <div>
+                            Select Categories
                         </div>
+                        <div id="categorydiv" heigh="300px" width="100px">
+                           <label id ="CategoryIDs">
+
+                                @*@Html.ListBoxFor(model => model.CategoryIDs,new MultiSelectList(Model.CategoryList,"Value","Text"),
+                                new {@class="CategoryIDs",multiple="multiple",id="CategoryIDs"})*@
+                                <select asp-for="CategoryIDs" asp-items="@Model.CategoryList" multiple="multiple" height="300px" width="100px" id="CategoryIDs"  class="CategoryIDs">
+                                </select>
+                           </label>
+                            
+                        </div>
+                       
                         <div class="form-floating py-2 col-12">
-                            <input type = "file" name="files" class="form-control border-0 shadow" multiple/>
+                            <input type="file" name="files" class="form-control border-0 shadow" multiple />
                             <label asp-for="Product.ProductImages" class="ms-2"></label>
                         </div>
                         <div>
@@ -80,10 +87,10 @@
                             </a>
                         </div>
                     </div>
-                    <div class = "col-2">
-                        @if(Model.Product.ProductImages != null)
-                        {   
-                            foreach(var image in Model.Product.ProductImages)
+                    <div class="col-2">
+                        @if (Model.Product.ProductImages != null)
+                        {
+                            foreach (var image in Model.Product.ProductImages)
                             {
                                 <div class="border p-1 m-2 text-center">
                                     <img src="@image.ImageUrl" width="100%"
@@ -93,9 +100,9 @@
                                     </a>
                                 </div>
                             }
-                            
+
                         }
-                        
+
 
                     </div>
                 </div>
@@ -107,20 +114,25 @@
 
 
 @section Scripts{
+    <script>
+
+        $('#CategoryIDs').select2({
+            dropdownParent: $('#categorydiv'),
+            placeholder: 'Select a category'
+        });
+
+        $(document).ready(function () {
+            $('.CategoryIDs').select2();
+        });
+
+
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons  lists   table visualblocks wordcount',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough |  align lineheight | numlist bullist indent outdent',
+        });
+    </script>
     @{
-        <script>
-            tinymce.init({
-                selector: 'textarea',
-                plugins: 'anchor autolink charmap codesample emoticons lists table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
-                toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
-                tinycomments_mode: 'embedded',
-                tinycomments_author: 'Author name',
-                mergetags_list: [
-                    { value: 'First.Name', title: 'First Name' },
-                    { value: 'Email', title: 'Email' },
-                ]
-            });
-        </script>
         <partial name="_ValidationScriptsPartial" />
     }
 }
