--- a/BulkyBookWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -26,7 +26,7 @@
                     <th>ISBN</th>
                     <th>Price</th>
                     <th>Author</th>
-                    <th>Category</th>
+                   @* <th>Category</th>*@
                     <th></th>
                 </tr>
             </thead>
